# Screenshot-Tool

./: CMakeLists.txt  README.md  main.cpp
headers/: Screen.hpp  Utils.hpp
sources/: Screen.cpp  Utils.cpp
ui/: ScreenshotUI.cpp  ScreenshotUI.hpp  ScreenshotUI.ui
ui/CaptureImage/: CaptureImage.cpp  CaptureImage.hpp  CaptureImage.ui
ui/Preview/: Preview.cpp  Preview.hpp  Preview.ui
